# lildrip

./: .gitignore  Dockerfile  README.md  app.py  bartlett_lewis_model.py  blm.py  blm_demo.py  demo.py  generate_demo_rain.py  main.py  pyproject.toml  requirements.txt
api/: app.py  main.py
examples/: bartlett_lewis_demo.py  generate_demo_rain.py
src/lildrip/: __init__.py  bartlett_lewis_model.py  plotting.py
tests/: test_model.py
