[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lildrip"
version = "0.1.0"
description = "Rainfall disaggregation with Bartlett-Lewis model"
authors = [{name = "Unknown"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.3.2"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
