[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lildrip"
version = "0.1.0"
description = "Stochastic rainfall disaggregation using the Bartlett-Lewis process"
authors = [{name = "Narumi Abe"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.3.2"]
api = ["fastapi>=0.111.0", "uvicorn>=0.30.0", "python-multipart>=0.0.9"]

[project.urls]
Source = "https://github.com/naruminho/lildrip"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
